--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.22.2",
     "scroll-lock": "^2.1.5"
   },
